Version 0.0.2 (not yet released):
- CVL: Improve error messages when reading NetPBM frames.
- CVL: Export CVL_VERSION, needed by cvl.m4.
- CVL: Renamed many cvl_frame_* functions to cvl_*.
- cvtool: Added the sedt command as an interface to cvl_sedt() and cvl_sedt3d().
- CVL: Added cvl_sedt() and cvl_sedt3d() to compute the Squared Euclidean 
  Distance Transform in O(n).
- CVL: Fixed prototype of functions that get an array of frames.
- CVL: Added functions to report the size of fields and frames.
- CVL: Print a backtrace when cvl_assert() fails (only on glibc systems).
- CVL/cvtool: Added xadd and xsub layering modes.
- CVL/cvtool: Added min and max filters.
- CVL/cvtool: Renamed *smooth* to *filter*.
- cvtool: Improved int/double array option handling.
- cvtool: Added a layer command.
- CVL: Added cvl_frame_layer().
- cvtool: Changed channel command: extract as graylevel, and allow reversion.
- CVL: cvl_io_(load|save)_pnm(): close file.
- CVL: Add function cvl_sort_array_pixel().
- CVL: Change prototype of cvl_pixel_convert().
- CVL: Export cvl_frame_set_pixel_type()
- CVL: Remove cvl_frame_rgb_to_?() functions
- cvtool/CVL: Minor documentation improvements.
- CVL: Remove cvl_draw_* functions.
- cvtool: Removed grid command.
- cvtool: Added draw command to draw geometric objects, lines, curves, and
  text. The command is a frontend to the CAIRO library.
- Added string_to_utf8() module to notgnulib.
- Gnulib update. Added the following modules:
  xstrndup, localcharset, iconvme.
- CVL: cvl_color_from_string()
  cvtool: All commands that accept color names as options
  Replace rrr,ggg,bbb format with r<val>g<val>b<val>.
- CVL: Add interface to the CAIRO graphics library.
- CVL: Always use 32bit for pixels.
- CVL: Replaced cvl_vector*_t types with simple pointers.
- CVL: Changed cvl_field_get*() functions. Added cvl_field_ref*() functions.
- CVL: cvl_io_read_pnm(), cvl_io_write_pnm(), cvl_io_load_pnm(),
       cvl_io_save_pnm()